# Geisha

./: .gitignore  .stylish-haskell.yaml  CFG  Geisha.cabal  LICENSE  README.md  stack.yaml
app/: Main.hs
src/Geisha/: AST.hs  Compile.hs  Error.hs  Lexer.hs  Parser.hs  TypeInfer.hs  TypeInference.hs  Utils.hs
src/Geisha/AST/: PrettyPrint.hs
src/Geisha/Codegen/: Emit.hs  JIT.hs  LLVM.hs  Primitive.hs
src/Geisha/Pass/: Flatten.hs  Instruction.hs
src/Geisha/Type/: Env.hs  Primitive.hs  Subst.hs
src/Geisha/TypeInfer/: Env.hs  Primitive.hs
test/: Spec.hs
test/source/: error.gs  t1.gs  test.gs
