name:                Geisha
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nameoverflow/Geisha
license:             WTFPL
license-file:        LICENSE
author:              Hcyue
maintainer:          i@hcyue.me
copyright:           2017 Hcyue
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Geisha.Compile
                     , Geisha.Parser
                     , Geisha.Lexer
                     , Geisha.AST
                     , Geisha.AST.PrettyPrint
                     , Geisha.Form
                     , Geisha.Error
                     , Geisha.Codegen.LLVM
                     , Geisha.Codegen.Primitive
                     , Geisha.TypeInfer
                     , Geisha.Type.Subst
                     , Geisha.Type.Env
                     , Geisha.Type.Primitive
  build-depends:       base >= 4.7 && < 5
                     , parsec
                     , mtl
                     , containers
                     , hashmap
                     , llvm-general-pure
                     , llvm-general
                     , pretty
  default-language:    Haskell2010
  extensions:          MultiParamTypeClasses
executable Geisha-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , mtl
                     , Geisha
                     , haskeline
                     , llvm-general-pure
                     , llvm-general
  default-language:    Haskell2010

test-suite Geisha-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , Geisha
                     , HUnit
                     , mtl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nameoverflow/Geisha
